--- a/css/style.css
+++ b/css/style.css
@@ -42,17 +42,17 @@ section {
 
 section#hero {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    gap: 4.8rem;
+
 }
 
 section#hero div#trending {
     display: flex;
     flex-direction: row;
-    gap: 0.8rem;
     align-items: baseline;
+    gap: 0.75rem;
 }
   
 h1,
@@ -82,6 +82,10 @@ input {
 main {
     background-color: white;
     padding: 32px 72px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+    justify-content: center;
 }
   
 nav button {
@@ -102,6 +106,15 @@ nav button {
   
 .card-footer {
     font-size: 14px;
+    display: flex;
+    justify-content: space-between;
+}
+
+article.card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: space-evenly;
 }
   
 .card-footer * {
@@ -111,6 +124,8 @@ nav button {
 #subnav {
     padding: 32px 72px 0;
     background-color: white;
+    display: flex;
+    justify-content: space-between;
 }
   
 #subnav button {
